completed overview consolidation

--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -1102,7 +1102,7 @@ of Monte Carlo methods.
        \mathrm{\normalsize I}\!\left[ x^2 + y^2 < 1 \right] \ p_X(x) \ p_Y(y) \ \mathrm{d}x \, \mathrm{d}y
 \\[8pt]
 & \approx
-& \frac{1}{M}
+& \frac{1}{M} \sum_{m=1}^M
 \ \mathrm{\Large I}\!\left[ \left( x^{(m)} \right)^2 + \left( y^{(m)} \right)^2
                    < 1 \right]
 \end{eqnarray*}
