--- a/stan-cpp-2018/stan-cpp.Rmd
+++ b/stan-cpp-2018/stan-cpp.Rmd
@@ -2,7 +2,10 @@
 title: "Stan C++ Development:<br/>Adding a New Function"
 author: "Bob Carpenter & Sean Talts"
 date: "August 2018"
-output: ioslides_presentation
+output:
+  ioslides_presentation:
+    css: styles.css
+  
 ---
 
 ```{r setup, include=FALSE}
