--- a/stan-cpp-2018/stan-cpp.Rmd
+++ b/stan-cpp-2018/stan-cpp.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Stan C++ Development: Adding a New Function"
+title: "Stan C++ Development:<br /> Adding a New Function"
 author: "Bob Carpenter & Sean Talts"
 date: "August 2018 (StanCon Helsinki)"
 output:
@@ -8,10 +8,12 @@ output:
 widescreen: yes
 ---
 
-```{r setup}
+```{r setup, include = FALSE, warning = FALSE, cache = TRUE, echo = FALSE, comment = ""}
+```
+
+```{r echo = FALSE, include = FALSE}
 library(knitr)
 library(ggplot2)
-knitr::opts_knit$set(include = FALSE, warning = FALSE, cache = TRUE, echo = FALSE, comment = "")
 ```
 
 <style>
@@ -51,39 +53,32 @@ code {
 
 
 ## Best and Worst Decisions for Stan?
-
 * What are the best and worst decisions you made regarding the implementation of Stan?
-    - Worst decision: using C++
-    - Best decision: using C++
+    - *Worst decision*: using C++
+    - *Best decision*: using C++
 
 
 ## Why C++?
+* It's **not the easiest language** in the world
+    - the spec is incomplete by design so *compilers vary*, even by optimization
+    - it's been a *moving target* from C++03 to C++20
+    - low-level memory access and pointers makes it *dangerous*
+* But it's **very powerful**
+    - whole *new language with C++11* and beyond
+    - decent *matrix and math libs* (like Fortran, unlike all else)
+    - *control memory* for autodiff
+    - *template overloads* for autodiff
+    - *static evaluation* of branchpoints (template metaprograms are why C++ is fast)
+    - *elimination of intermediates* (via expression templates)
+    - *native in-memory communication* with Python and R
 
-* It's not the easiest language in the world
-    - the spec is incomplete by design so compilers vary
-    - it's been a moving target from C++03 to C++20
-    - low-level control makes it dangerous
-* But it's very powerful
-    - whole new language with C++11 and beyond
-    - decent matrix and math libs (like Fortran, unlike all else)
-    - control memory for autodiff
-    - template overloads for autodiff
-    - static evaluation of branchpoints (template programs)
-    - elimination of intermediates (expression templates)
-    - native in-memory communication with Python and R
     
-    
-## GitHub Resources
-
-
-## Placeholder slide for diagram
-diagram will show something like: 
-
-* Stan compiler source compiles with C++ compiler to Stan compiler
-* Stan language model compiles with Stan compiler to C++ model
-* C++ model includes Math library
-* C++ model compiles with C++ compiler to program
-* program is fed data and spits out draws
+## Overall Stan Organization
+* Stan transpiler converts Stan program to C++ class for model
+    - standard parser, abstract syntax tree, generator design
+* C++ class includes the Stan math library
+* C++ class compiled mostly header only along with algorithms and math library
+* Result is executable (CmdStan) or dynamically linked object code (RStan, PyStan)
 
 ## Stan language is translated to a C++ model
 * Creates a C++ model class with a known interface
@@ -91,32 +86,38 @@ diagram will show something like:
 * Primary entry point on the class is the `log_prob` function
     - Takes in parameter values and returns their log probability density (potentially up to a constant)
 
-## The Stan<>C++ translator
+
+## The Stan to C++ translator
 * Called many things - compiler, transpiler, parser
 * Also written in C++
 * Lives in the Stan repo alongside the algorithms and services (`lang`)
 * Functions are first defined in the Math library and then exposed in the Stan language
 
-## C++ model is compiled into a program
+
+## C++ Model Compiled to Object Code
 * Includes the Math library - most or all functions and data types are defined there
 * Compiled with the Stan algoirthms
 * Some basic functionality for I/O lives in CmdStan, which presents the interface a user sees on the command line
 
-## Current repo structure
-CmdStan -> Stan -> Math
 
-* Uses git submodules
+## Current Repository Structure
+* Repositories `cmdstan`, `pystan`, `rstan` include `stan`; `stan` includes  `math`
+    - Git submodules
 * CmdStan has the Stan repo as a git submodule at `stan/`
-* Stan has the Math library as a git submodule at `lib/stan_math`
-* Math library directly includes (not as submodules) some external libraries like boost at `lib/`
+* Stan has the Math library as a git submodule at `lib/stan_math` 
+    - `stan/lib/stan_math` to CmdStan
+* Math library directly includes Boost, Eigen, Sundials at `lib/`
+    - `stan/lib/stan_math/lib` to CmdStan
 
-## A Stan program
+
+## A Stan Program
 * `Matrix program(Matrix data) {...}`
     - Function from data to a sample of parameter draws typical given that data and model
 * Compiled with a few algorithms that use the model density to find typical parameter draws
 * Most of the complexity lies in the likelihood and is built using functions in the Math library
 
-## Most of "Stan" is the Math library
+
+## Most of Stan's code is in the Math library
 * Provides users with many functions to express complicated likelihoods
 * Autodiff system gives the algorithms the gradients they need automatically for any Stan or Math library code
 * Split up into `stan` and `test`
